# maibook

./: .gitignore  CHANGELOG.md  README.md  Readme-ZH.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agents/: toolchain-config.md
competition/: maibook-competition-plan.md  maibook-demo.html
competition/maibook-dev-plan/: maibook-dev-plan.html
docs/: enhancement-plan.md  session-summary-2026-06-27.md  session-summary-2026-06-28.md
docs/prd/: 2026-06-27-maibook-prd.md
docs/sessions/: 2026-06-27- brainstorming-session.md
origin/: 3.0.4_0.pem
origin/extracted/: 1051.js  1060.js  1232.js  124.js  133.js  1398.js  1403.js  1445.js  158.js  1780.js  1956.js  1969.js  2070.js  2129.js  2154.js  2226.js  232.js  2378.js  2469.js  25.js  2557.js  2603.js  2702.js  2715.js  2766.js  2819.js  2841.js  2860.js  2879.js  2965.js  302.js  3192.js  3311.js  335.js  3373.js  3493.js  3530.js  3697.js  3764.js  3917.js  (+89 more)
src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.lock.bak  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs  repos.rs
src/components/: AnnotationPanel.tsx  BookmarkPanel.tsx  ChatPanel.tsx  ExplainPopup.tsx  HighlightLayer.tsx  PageTranslatePanel.tsx  PaperCard.tsx  SearchOverlay.tsx  SelectionToolbar.tsx  SummaryPanel.tsx  TranslationPopup.tsx  TrashBin.tsx  TrashCard.tsx
src/locales/: en.json  zh.json
src/pages/: PaperDetail.tsx  PaperList.tsx  ReaderPage.tsx  SettingsPage.tsx  SkillHub.tsx
src/stores/: annotationStore.ts  readerStore.ts  (+3 more)
(+37 files in other folders)
