[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["time"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
lopdf = "0.34"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2"
futures-util = "0.3"
scraper = "0.22"
